# InterprocessCommsExample

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  main.cpp
include/Client/: client.h
include/Messages/: baseMsg.h  chatMsg.h
include/Messaging/: baseMsg.h  chatMsg.h  messageBroker.h
src/: CMakeLists.txt  baseMsg.cpp  chatMsg.cpp  messageBroker.cpp
test/: CMakeLists.txt
